k8s/_generated/apps/nginx-test/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx-test
spec:
  selector:
    app: nginx-test
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
